test/tests/compiler/12_unsigned_integers/invalid_types/conflicting_uint_ulong.plx
#  Can't declare the same function with two return types: unsignd int and unsigned long 
pub fn foo(none) u32;

pub fn foo(none) u64 {
    return 0
}

pub fn main(none) i32 {
    return false
}
